--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -6,9 +6,9 @@
     <string name="press_to_add_image">タップして画像を追加</string>
     <string name="press_to_change_image">画像をタップして換える</string>
     <string name="add_item_title">新規作成</string>
-    <string name="edit_item_title"><xliff:g name="item_title" example="ABC-123">%s</xliff:g> を編集</string>
-    <string name="save_added_item"><xliff:g name="item_title" example="ABC-123">%s</xliff:g> を作成</string>
-    <string name="save_edited_item"><xliff:g name="item_title" example="ABC-123">%s</xliff:g> を保存</string>
+    <string name="edit_item_title">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>｣を編集</string>
+    <string name="save_added_item">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>｣を作成</string>
+    <string name="save_edited_item">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>｣を保存</string>
     <string name="yes">はい</string>
     <string name="no">いいえ</string>
     <string name="delete">削除</string>
