--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -6,9 +6,9 @@
     <string name="press_to_add_image">タップして画像を追加</string>
     <string name="press_to_change_image">画像をタップして換える</string>
     <string name="add_item_title">新規作成</string>
-    <string name="edit_item_title">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>｣を編集</string>
-    <string name="save_added_item">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>｣を作成</string>
-    <string name="save_edited_item">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>｣を保存</string>
+    <string name="edit_item_title">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>」を編集</string>
+    <string name="save_added_item">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>」を作成</string>
+    <string name="save_edited_item">｢<xliff:g name="item_title" example="ABC-123">%s</xliff:g>」を保存</string>
     <string name="yes">はい</string>
     <string name="no">いいえ</string>
     <string name="delete">削除</string>
@@ -121,4 +121,10 @@
     <string name="empty_list_archive_desc">既存のプレートをコピーして貼り付けと、アーカイブすることができます。</string>
     <string name="sort_by_country_and_age_asc">国家も期間も昇順</string>
     <string name="sort_by_country_and_age_desc">国家も期間も降順</string>
+    <string name="transfer_from_wishlist_dialog_text">この欲しい物に基づいて新規プレートを作成して、欲しい物が削除されます。</string>
+    <string name="transfer_from_plates_dialog_title">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>」をアーカイブしますか？</string>
+    <string name="transfer_from_plates_dialog_text">アーカイブにコピーを作成して、プレートが削除されます。</string>
+    <string name="transfer_from_wishlist_dialog_title">完了にしますか？</string>
+    <string name="transfer_from_wishlist_button">完了にする</string>
+    <string name="transfer_from_plates_button">アーカイブ</string>
 </resources>
