--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,10 @@
     <string name="empty_list_wishlist_desc" translatable="false">MISSING TRANSLATION</string>
     <string name="sort_by_country_and_age_asc">Country &amp; Age, ascending</string>
     <string name="sort_by_country_and_age_desc">Country &amp; Type, descending</string>
+    <string name="transfer_from_wishlist_dialog_title">Mark as complete?</string>
+    <string name="transfer_from_wishlist_dialog_text">A new plate will be created based on this wishlist entry, and this entry will in turn be deleted.</string>
+    <string name="transfer_from_plates_dialog_title">Archive <xliff:g name="reg_no" example="ABC-123">%s</xliff:g>?</string>
+    <string name="transfer_from_plates_dialog_text">A copy of this plate will be added to the archive, and the plate will be deleted.</string>
+    <string name="transfer_from_wishlist_button">Mark as complete</string>
+    <string name="transfer_from_plates_button">Archive</string>
 </resources>
