--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -138,4 +138,6 @@
     </plurals>
     <string name="version">Versio</string>
     <string name="search_placeholder">Hae rekisteritunnusta</string>
+    <string name="transferred_from_wishlist_message">Uusi kilpi on luotu</string>
+    <string name="transferred_from_plates_message"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> on arkistoitu</string>
 </resources>
