--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,6 @@
     </plurals>
     <string name="version">Version</string>
     <string name="search_placeholder">Search by registration number</string>
+    <string name="transferred_from_wishlist_message">A new plate has been created</string>
+    <string name="transferred_from_plates_message"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> has been archived</string>
 </resources>
