--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -140,4 +140,5 @@
     <string name="search_placeholder">Hae rekisteritunnusta</string>
     <string name="transferred_from_wishlist_message">Uusi kilpi on luotu</string>
     <string name="transferred_from_plates_message"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> on arkistoitu</string>
+    <string name="collection_color">Kokoelman väri</string>
 </resources>
