--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -137,4 +137,5 @@
     <string name="search_placeholder">登録番号を検索</string>
     <string name="transferred_from_wishlist_message">新規プレートが作成されました</string>
     <string name="transferred_from_plates_message">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>｣ がアーカイブされました</string>
+    <string name="collection_color">コレクションの色</string>
 </resources>
