--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -138,4 +138,8 @@
     <string name="transferred_from_wishlist_message">新規プレートが作成されました</string>
     <string name="transferred_from_plates_message">｢<xliff:g name="reg_no" example="ABC-123">%s</xliff:g>｣ がアーカイブされました</string>
     <string name="collection_color">コレクションの色</string>
+    <string name="export_text">エクスポート</string>
+    <string name="import_text">インポート</string>
+    <string name="export_csv">CSVをエクスポート</string>
+    <string name="import_csv">CSVをインポート</string>
 </resources>
