--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,8 @@
     <string name="transferred_from_wishlist_message">A new plate has been created</string>
     <string name="transferred_from_plates_message"><xliff:g name="reg_no" example="ABC-123">%s</xliff:g> has been archived</string>
     <string name="collection_color">Collection color</string>
+    <string name="export_text">Export</string>
+    <string name="import_text">Import</string>
+    <string name="export_csv">Export CSV</string>
+    <string name="import_csv">Import CSV</string>
 </resources>
