--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="filter">Filter</string>
     <string name="cancel">Cancel</string>
     <string name="cost">Cost</string>
-    <string name="image_loading">Loading image</string>
+    <string name="image_loading">Image loading...</string>
     <string name="loading">Loading...</string>
     <string name="country">Country</string>
     <string name="region">Region</string>
@@ -151,4 +151,6 @@
     <string name="import_text">Import</string>
     <string name="export_csv">Export CSV</string>
     <string name="import_csv">Import CSV</string>
+    <string name="image_error">Image error</string>
+    <string name="error">Error</string>
 </resources>
