--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -116,9 +116,9 @@
     <string name="empty_list_collection_msg">このコレクションは空です</string>
     <string name="empty_list_plates_msg">まだ何もありません</string>
     <string name="empty_list_collection_desc">プレートを編集中、コレクションを選ぶと含められる。</string>
-    <string name="empty_list_plates_desc">最初に新しいプレートを作成する。</string>
+    <string name="empty_list_plates_desc">最初に新しいプレートを作成しましょう。</string>
     <string name="empty_list_default_desc">絞り込み条件を確認してください。</string>
-    <string name="empty_list_archive_desc">既存のプレートをコピーして貼り付けと、アーカイブすることができます。</string>
+    <string name="empty_list_archive_desc">プレートをアーカイブして、過去に持っていた物を管理できます。</string>
     <string name="sort_by_country_and_age_asc">国家も期間も昇順</string>
     <string name="sort_by_country_and_age_desc">国家も期間も降順</string>
     <string name="transfer_from_wishlist_dialog_text">この欲しい物に基づいて新規プレートを作成して、欲しい物が削除されます。</string>
@@ -151,4 +151,9 @@
     <string name="collection_color_green">緑</string>
     <string name="collection_color_blue">青</string>
     <string name="collection_color_violet">紫</string>
+    <string name="empty_list_wishlist_desc">欲しい物を追加して、探し中のプレートを管理できます。手に入れると、欲しい物に基づいて新しいプレートを作成することもできます。</string>
+    <string name="empty_list_search_msg">検索結果はありません</string>
+    <string name="empty_list_search_desc">｢<xliff:g name="search_query" example="ABC123">%s</xliff:g>｣ に一致する結果は見つかりませんでした。別の検索語句をお試しください。</string>
+    <string name="empty_list_filter_msg">結果はありません</string>
+    <string name="empty_list_filter_desc">適用している絞り込み条件を確認してください。</string>
 </resources>
