--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -159,4 +159,8 @@
     <string name="empty_list_search_desc">Hakua \"<xliff:g name="search_query" example="ABC123">%s</xliff:g>\" vastaavia tuloksia ei löytynyt. Yritä hakulausekkeen muokkaamista.</string>
     <string name="empty_list_filter_msg">Ei tuloksia</string>
     <string name="empty_list_filter_desc">Tarkista käytössä olevat rajausehdot virheiden varalta.</string>
+    <string name="export_dialog_text">Näkyvissä olevat kilvet voidaan viedä tallentamalla ne CSV-tiedostoon (.csv).</string>
+    <string name="export_msg_success">Vienti onnistui</string>
+    <string name="export_msg_failure">Vienti epäonnistui</string>
+    <string name="export_dialog_title">Vienti</string>
 </resources>
