--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,4 +168,6 @@
     <string name="export_msg_success">Export completed</string>
     <string name="export_msg_failure">Export failed</string>
     <string name="export_dialog_title">Export</string>
+    <string name="import_dialog_title">Import</string>
+    <string name="import_dialog_text">Add plates by importing a CSV file (.csv).</string>
 </resources>
