--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -171,4 +171,6 @@
         <item quantity="one">Tuotu %d kilpi</item>
         <item quantity="other">Tuotu %d kilpeä</item>
     </plurals>
+    <string name="help">Ohjeet</string>
+    <string name="import_details">Lue lisää tuonnista</string>
 </resources>
