Ability to display stats for Wishlist & Archive as opposed to just Plates

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -173,4 +173,6 @@
     </plurals>
     <string name="help">Ohjeet</string>
     <string name="import_details">Lue lisää tuonnista</string>
+    <string name="countries">Valtiot</string>
+    <string name="types">Tyypit</string>
 </resources>
