--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,6 @@
     <string name="import_details">Learn more about importing</string>
     <string name="countries">Countries</string>
     <string name="types">Types</string>
+    <string name="select_collection">Select collection</string>
+    <string name="percentage_of_plates"><xliff:g name="percentage" example="100 %">%s</xliff:g> of all plates</string>
 </resources>
