--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -177,4 +177,6 @@
     <string name="types">Tyypit</string>
     <string name="select_collection">Valitse kokoelma</string>
     <string name="percentage_of_plates"><xliff:g name="percentage" example="100 %">%s</xliff:g> kaikista kilvistä</string>
+    <string name="total">Yhteensä</string>
+    <string name="total_with_punctuation">"Yhteensä: "</string>
 </resources>
