--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -106,12 +106,12 @@
     <string name="language">Kieli</string>
     <string name="lang_system_default">Järjestelmän oletus</string>
     <string name="continue_button">Jatka</string>
-    <string name="language_redirect_text">Sinut ohjataan laitteen järjestelmäasetuksiin sovelluksen kielen vaihtamista varten.</string>
+    <string name="language_redirect_text">Sinut ohjataan laitteen omiin kieliasetuksiin sovelluksen kielen vaihtamista varten.</string>
     <string name="user_country">Sovelluksen alue</string>
     <string name="default_setting">Oletus</string>
     <string name="currency">Valuutta</string>
     <string name="currency_unit">Valuuttayksikkö</string>
-    <string name="user_country_info">Aluevalinta vaikuttaa mm. numeroiden muotoiluun ja oletusmittayksiköihin.</string>
+    <string name="user_country_info">Aluevalinta vaikuttaa mm. numeroiden muotoiluun ja valuuttaan.</string>
     <string name="empty_list_archive_msg">Arkisto on tyhjä</string>
     <string name="empty_list_wishlist_msg">Toivelista on tyhjä</string>
     <string name="empty_list_collection_msg">Tämä kokoelma on tyhjä</string>
