--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -105,7 +105,7 @@
     <string name="language">言語</string>
     <string name="lang_system_default">システムのデフォルト</string>
     <string name="continue_button">続ける</string>
-    <string name="language_redirect_text">アプリの言語を変更するために、デバイスのシステム設定に遷移します。</string>
+    <string name="language_redirect_text">アプリの言語を変更するために、デバイスの言語設定に遷移します。</string>
     <string name="user_country">アプリの地域</string>
     <string name="default_setting">デフォルト</string>
     <string name="currency">通貨</string>
