Name app to Rekkary

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">Collection Catalog</string>
+    <string name="app_name" translatable="false">Rekkary</string>
     <string name="settings">Settings</string>
     <string name="no_image">No image</string>
     <string name="press_to_add_image">Press here to add an image</string>
