--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,7 +126,7 @@
     <string name="empty_list_archive_desc">Keep track of plates no longer in your possession. You can archive existing plates, or add new entries manually.</string>
     <string name="empty_list_wishlist_msg">Wishlist is empty</string>
     <string name="sort_by_country_and_age_asc">Country &amp; Age, ascending</string>
-    <string name="sort_by_country_and_age_desc">Country &amp; Type, descending</string>
+    <string name="sort_by_country_and_age_desc">Country &amp;  Age, descending</string>
     <string name="transfer_from_wishlist_dialog_title">Mark as complete?</string>
     <string name="transfer_from_wishlist_dialog_text">A new plate will be created based on this wishlist entry, and this entry will in turn be deleted.</string>
     <string name="transfer_from_plates_dialog_title">Archive <xliff:g name="reg_no" example="ABC-123">%s</xliff:g>?</string>
@@ -184,4 +184,8 @@
     <string name="percentage_of_plates"><xliff:g name="percentage" example="100 %">%s</xliff:g> of all plates</string>
     <string name="total">Total</string>
     <string name="total_with_punctuation">Total:</string>
+    <string name="sort_by_age_asc">Period &amp; Year, ascending</string>
+    <string name="sort_by_age_desc">Period &amp; Year, descending</string>
+    <string name="sort_by_archival_oldest">Earliest archival</string>
+    <string name="sort_by_archival_newest">Most recent archival</string>
 </resources>
